# minizip-sys

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
src/: bindings.rs  lib.rs
