[package]
name = "minizip-sys"
version = "0.1.0"
authors = ["JiYongdong <jiyongdong@ata.net.cn>"]
license = "MIT"
edition = "2018"
build = "build.rs"
links = "minizip"
description = "Rust FFI bindings for minizip"
repository = "https://github.com/jyd519/minizip-sys"

[dependencies]
libc = "0.2.62"

[build-dependencies]
cmake = "0.1.42"
bindgen = "0.51.0"
